# rules_rust_multiple_workspaces

./: .gitignore  WORKSPACE
workspace1/: Cargo.toml
workspace1/foo/: BUILD.bazel  Cargo.toml
workspace1/foo/src/: lib.rs
workspace2/: Cargo.toml
workspace2/bar/: BUILD.bazel  Cargo.toml
workspace2/bar/src/: lib.rs
workspace2/local_vendor/: foo
